jenkins-master/master-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: jenkins
  namespace: default
spec:
  rules:
    - host: jenkins.io
      http:
        paths:
        - path: /
          backend:
            serviceName: jenkins-service
            servicePort: 80
